--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,18 +1,18 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Deployment
 
 on:
   push:
-    branches: ['main']
-  pull_request:
     branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    environment:
+      name: production
+      url: https://github.com
     strategy:
       matrix:
         node-version: [20.x, 21.x]
